# LE270

./: .gitignore  README.md
.github/workflows/: main.yml
fibocom_opensrcSDK_12007_7000/: GccBuild.sh  GccBuild_ec7xx.bat  Makefile  get_patch_s.sh  launch.py  opencpu.py
fibocom_opensrcSDK_12007_7000/cust_app/: Makefile.inc
fibocom_opensrcSDK_12007_7000/cust_app/app_demo/: app.c  app.h  app_ftp.c  app_http.c  app_lbs.c  app_lbs.h  app_mqtt.c  app_multiapp.c  app_multiapp.h  app_pdp.c  app_pdp.h  app_socket.c  app_wifiscan.c  app_wifiscan.h
fibocom_opensrcSDK_12007_7000/cust_app/fibo_opencpu_demo/: oc_3gpp_demo.c  oc_Matrixlcd_demo.c  oc_aep_demo.c  oc_at_demo.c  oc_atcmd_demo.c  oc_audio_demo.c  oc_audio_list_play_demo.c  oc_audio_stream_demo.c  oc_can_demo.c  oc_cell_demo.c  oc_ext_flash_demo.c  oc_ffs_demo.c  oc_gnss_demo.c  oc_gpio_demo.c  oc_i2c_demo.c  oc_lbs_demo.c  oc_lcd_demo.c  oc_lpm_demo.c  oc_mqtt_demo.c  oc_mqtt_demo1.c  oc_nw_demo.c  oc_onenet_demo.c  oc_osi_demo.c  oc_ota_demo.c  oc_other_demo.c  oc_pa_demo.c  oc_pwm_demo.c  oc_recoder_demo.c  oc_signal_urc_demo.c  oc_sms_demo.c  oc_sms_send_rev_demo.c  oc_spi_demo.c  oc_ssl_demo.c  oc_tts_demo.c  oc_uart_demo.c  oc_usb_demo.c  oc_websocket_demo.c
fibocom_opensrcSDK_12007_7000/cust_app/include/: fibo_opencpu_api.h
fibocom_opensrcSDK_12007_7000/cust_app/src/: app_image.c  app_ver.c
fibocom_opensrcSDK_12007_7000/driver/: Makefile.inc
fibocom_opensrcSDK_12007_7000/driver/board/ec7xx_0h00/inc/: plat_config.h
fibocom_opensrcSDK_12007_7000/driver/board/ec7xx_0h00/src/: Makefile.inc
fibocom_opensrcSDK_12007_7000/driver/hal/common/inc/: ecuiccapi.h  exception_dump_defs.h  exception_process.h
fibocom_opensrcSDK_12007_7000/fibocom/: Makefile.inc
fibocom_opensrcSDK_12007_7000/fibocom/fibo-config/: .gitignore
fibocom_opensrcSDK_12007_7000/fibocom/fibo-config/fibo_devcfg/tools/: fibconfig  gendevcfg.py
fibocom_opensrcSDK_12007_7000/fibocom/fibo-framework/PAL/include/: atcmd.h  ffw_atdevice_plat.h  ffw_camera_plat.h  ffw_decode_bar_plat.h  ffw_device.h  ffw_fs.h  ffw_gpio.h  ffw_i2c.h  ffw_inner_flash.h  ffw_keypad.h  ffw_lpg.h  ffw_mhw_plat.h  ffw_msg_queue.h  ffw_one_wire.h  ffw_os.h  ffw_pal_cert.h  ffw_pal_flight.h  ffw_pal_kt.h  ffw_pal_lcd.h  ffw_pal_lpm.h  ffw_pal_nosignal.h  ffw_pal_sim.h  ffw_pal_sms.h  ffw_pwm.h  ffw_rat.h  ffw_sdmmc.h  ffw_socket.h  ffw_spi.h  ffw_spi_flash.h  ffw_timer.h  ffw_uart.h  ffw_wifiscan.h  ivTTSSDKID.h
fibocom_opensrcSDK_12007_7000/fibocom/fibo-framework/application/opencpu/: app.ld  app2.ld  core_export.list
fibocom_opensrcSDK_12007_7000/fibocom/fibo-framework/application/opencpu/sdk/build_stub/: CMakeLists.txt  core_config.cmake
fibocom_opensrcSDK_12007_7000/fibocom/fibo-framework/application/opencpu/secboot_app/: CMakeLists.txt  app.ld  fibo_env  headset
fibocom_opensrcSDK_12007_7000/fibocom/fibo-framework/common/include/: cme_code.h  ffw_3gpp.h  ffw_buffer.h  ffw_channel.h  ffw_crypto.h  ffw_decode_bar.h  ffw_event.h  ffw_file.h  ffw_kt.h  ffw_log.h  ffw_main.h  ffw_mqttc_interface.h  ffw_nv.h  ffw_rbuffer.h  ffw_result.h  ffw_sms.h  ffw_sslconf.h  ffw_taskqueue.h  ffw_utils.h
fibocom_opensrcSDK_12007_7000/fibocom/fibo-framework/module/ffw_ate/: ffw_ate.h  ffw_ate_cmd.h  ffw_ate_resp.h
fibocom_opensrcSDK_12007_7000/fibocom/fibo-framework/module/ffw_dns/: ffw_dns.h
fibocom_opensrcSDK_12007_7000/fibocom/fibo-framework/module/ffw_ftp/: ffw_ftpc.h  oc_ftpc.h
fibocom_opensrcSDK_12007_7000/fibocom/fibo-framework/module/ffw_http/: ffw_httpc.h  oc_httpc.h
fibocom_opensrcSDK_12007_7000/fibocom/fibo-framework/module/ffw_key/: ffw_key.h
fibocom_opensrcSDK_12007_7000/fibocom/fibo-framework/module/ffw_lbs/: ffw_lbs.h
fibocom_opensrcSDK_12007_7000/fibocom/fibo-framework/module/ffw_lpg/: ffw_lpg_logic.h
fibocom_opensrcSDK_12007_7000/fibocom/fibo-framework/module/ffw_misc/: ffw_misc.h
fibocom_opensrcSDK_12007_7000/fibocom/fibo-framework/module/ffw_mqtt/: ffw_mqttc.h
fibocom_opensrcSDK_12007_7000/fibocom/fibo-framework/module/ffw_ntp/: ffw_ntp.h
fibocom_opensrcSDK_12007_7000/fibocom/fibo-framework/module/ffw_opencpu/: ffw_app_start.h
fibocom_opensrcSDK_12007_7000/fibocom/fibo-framework/module/ffw_ws/: ffw_websocket.h
fibocom_opensrcSDK_12007_7000/middleware/: Makefile.inc
fibocom_opensrcSDK_12007_7000/middleware/developed/ccio/pub/: ccio_base.h  ccio_misc.h
fibocom_opensrcSDK_12007_7000/middleware/developed/imsnv/: eg_imscfg.json
fibocom_opensrcSDK_12007_7000/prebuild/FW/: Makefile.inc
fibocom_opensrcSDK_12007_7000/prebuild/PLAT/: Makefile.inc
fibocom_opensrcSDK_12007_7000/prebuild/PLAT/inc/: FreeRTOS.h  FreeRTOSConfig.h  LzmaEc.h  at_api.h  at_util.h  atc_decoder.h  atc_reply.h  audioCfg.h  ccio_device.h  ccio_tfc.h  cmsis_os2.h  mm_debug.h  mm_jpeg_if.h  mm_video_if.h  osasys.h  ostask.h  reset.h  sctdef.h  slpman.h  task.h  tlsf.h
fibocom_opensrcSDK_12007_7000/prebuild/PS/: Makefile.inc
fibocom_opensrcSDK_12007_7000/prebuild/PS/inc/: cmidev.h  cmimm.h  cmips.h  cmisim.h  cmisms.h  imicc.h  imicomm.h  imipro.h  imiss.h  imscommtype.h  networkmgr.h  pscommtype.h  psl1commtype.h  pssys.h  pstrace.h  tcpiphibapi.h  tcpipportmgrapi.h
fibocom_opensrcSDK_12007_7000/tools/: UpdateDBPattern.txt  comdb_cust_lib.txt  comdblib.txt  ecsecure  lfsutil
fibocom_opensrcSDK_12007_7000/tools/JLinkDeviceXMLEntry/: JLinkDevices.xml
fibocom_opensrcSDK_12007_7000/tools/eclipseProject/: .cproject  .project
fibocom_opensrcSDK_12007_7000/tools/eclipseProject/launchFile/: Debug_ap_at_command.elf.launch  Debug_ap_at_command_718.elf.launch  Debug_ap_bootloader.elf.launch  Debug_ap_bootloader_718.elf.launch  Debug_ap_driver_example.elf.launch  Debug_ap_driver_example_718.elf.launch  Debug_cp-demo-flash.elf.launch  Debug_cp-demo-flash_718.elf.launch
fibocom_opensrcSDK_12007_7000/tools/linux_log_tool/: Makefile  log_capture  log_capture.c
fibocom_opensrcSDK_12007_7000/tools/scripts/: Makefile.rules  Makefile.vars
(+499 files in other folders)
